@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.553 2022/11/14 18:51:28 wiz Exp $
+# $NetBSD: Makefile,v 1.554 2022/11/14 18:54:26 wiz Exp $
 
 COMMENT=	Mathematics
 
@@ -385,7 +385,6 @@ SUBDIR+=	py-cdecimal
 SUBDIR+=	py-claripy
 SUBDIR+=	py-ephem
 SUBDIR+=	py-fpconst
-SUBDIR+=	py-gmpy
 SUBDIR+=	py-gmpy2
 SUBDIR+=	py-gwcs
 SUBDIR+=	py-infinity
