@@ -1,6 +1,0 @@
-GMPY is a C-coded Python extension module that provides access to the GMP (or
-MPIR) multiple-precision arithmetic library.
-
-GMPY allows creation of multiprecision integer (mpz), float (mpf),and rational
-(mpq) numbers, conversion between them and to/from Python numbers/strings,
-arithmetic, bitwise, and some other higher-level mathematical operations999.
